first version for new_pgoku

--- a/roles/kvm-guest-qcow2/templates/user-data.j2
+++ b/roles/kvm-guest-qcow2/templates/user-data.j2
@@ -7,7 +7,7 @@ preserve_hostname: {{ preserve_hostname }}
  
 # Setup Users 
 users:
-{% for user in users_dic %}
+{% for user in users %}
   - name: {{ user.name }}
     groups: {{ user.groups }}
     shell: {{ user.shell }}
