--- a/roles/kvm-guest-qcow2/templates/user-data.j2
+++ b/roles/kvm-guest-qcow2/templates/user-data.j2
@@ -15,7 +15,7 @@ users:
 {% endfor %}
 {% for key in ssh_keys %}
     ssh_authorized_keys:
-      - {{ key.sshkey }}
+      - '{{ key.sshkey }}'
 {% endfor %}
 
 chpasswd:
