--- a/roles/kvm-guest-qcow2/templates/user-data.j2
+++ b/roles/kvm-guest-qcow2/templates/user-data.j2
@@ -13,9 +13,9 @@ users:
     shell: {{ user.shell }}
     sudo: {{ user.sudo }}
 {% endfor %}
-{% for sshkey in ssh_keys %}
+{% for current_ssh_key in ssh_keys_contents %}
     ssh_authorized_keys:
-      - "{{ lookup('file', sshkey) }}"
+      - "{{ current_ssh_key }}"
 {% endfor %}
 
 chpasswd:
